--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <body>
 
   <header>
-    <h1>Blog</h1>
+    <h1>silent hours</h1>
     <nav>
       <a href="/">Home</a>
       <a href="/journal/">Journals</a>
