--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,17 +19,21 @@
 
 <body>
 
-  <header>
-    <h1>silent hours</h1>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/journal/">Journals</a>
-      <a href="/poetry/">Poetry</a>
-      <a href="/photography/">Photography</a>
-      <a href="/art/">Art</a>
-      <a href="/media/">Media Reflections</a>
-    </nav>
-  </header>
+<header class="site-header">
+    <div class="container">
+        <div class="site-title">
+        <a href="/">silent hours</a>
+        </div>
+        <nav class="site-nav">
+        <a href="/">Home</a>
+        <a href="/journal/">Journals</a>
+        <a href="/poetry/">Poetry</a>
+        <a href="/photography/">Photography</a>
+        <a href="/art/">Art</a>
+        <a href="/media/">Media Reflections</a>
+        </nav>
+    </div>
+    </header>
 
   <main>
     {{ content }}
