--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ header {
 }
 
 header h1 {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Libre Baskerville', serif;
     font-size: 3em;
     margin-bottom: 0.5em;
 }
@@ -55,8 +55,8 @@ section {
 
 /* Section Titles */
 h2 {
-    font-family: 'Playfair Display', serif;
-    font-size: 2.5em;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 3.5em;
     margin-bottom: 20px;
 }
 
