--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
-    background-color: #ffffff;
+    background-color: #f8f5f0;
     color: #222;
 }
 
@@ -176,4 +176,11 @@ section:hover {
         display: block;
         margin: 10px 0;
     }
+}
+
+.post-date {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 0.9em;
+    color: #000000;
+    margin-bottom: 0px;
 }
