--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
-    background-color: #f8f5f0;
+    background-color: #FAF0E6;
     color: #222;
 }
 
@@ -101,7 +101,7 @@ h2 {
 
 .entry-preview h3 {
     font-size: 1.5em;
-    margin-bottom: 5px;
+    margin: 0 0 5px 0;
 }
 
 .entry-preview p {
