--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
-    background-color: #FFFFF0;
+    background-color: #fffcf0;
     color: #222;
 }
 
@@ -35,7 +35,7 @@ a:hover {
 
 /* Header */
 .site-header {
-    background: FFFFF0;
+    background: #fffcf0;
     padding: 5px 40px;
     border-bottom: 1px solid #eee;
 }
@@ -44,10 +44,10 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 90%;
+    max-width: 1200px;
     margin: 0 auto;
-    height: 50px;
     padding: 0 40px;
+    width: 100%;
 }
 
 .site-title a {
