--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ h1, h2, h3, h4, h5, h6 {
     color: #111;
 }
 
+p {
+    font-size: 1em;
+}
+
 main h1 {
     font-size: 2.5em;
     margin-top: 20px;
