--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <a href="/poetry/">Poetry</a>
         <a href="/photography/">Photography</a>
         <a href="/art/">Art</a>
-        <a href="/media/">Media Reflections</a>
+        <a href="/media/">Media</a>
         </nav>
     </div>
     </header>
