--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Libre Baskerville', serif;
     color: #111;
+    line-height: 1.2;
 }
 
 p {
@@ -220,7 +221,7 @@ img {
 
 .post-date {
     font-family: 'Work Sans', sans-serif;
-    font-size: 0.9em;
+    font-size: 1em;
     color: #000000;
     margin-bottom: 2px;
 }
